--- a/index.html
+++ b/index.html
@@ -7,26 +7,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Hero Section -->
-  <section id="hero" class="parallax">
-    <div class="hero-content">
-      <h1>Workshop on Advances in Telecommunications Research (WATR)</h1>
-      <p>June 14-16, 2025 | Queen’s University, Kingston, Ontario</p>
-      <a href="#registration" class="cta-button">Register Now</a>
-    </div>
-  </section>
-
-  <!-- Scope Section -->
-  <section id="scope" class="content-section">
+  <!-- Main Content Section -->
+  <section id="main-content" class="content-section">
     <div class="container">
+      <!-- Title -->
+      <h1>Workshop on Advances in Telecommunications Research (WATR)</h1>
+      <p class="subtitle">June 14-16, 2025 | Queen’s University, Kingston, Ontario</p>
+
+      <!-- Scope Section -->
       <h2>Scope</h2>
       <p>Join us at WATR 2025, where leading researchers, industry experts, and practitioners will explore groundbreaking advancements in telecommunications. This workshop provides a dynamic platform for exchanging ideas, fostering collaborations, and shaping the future of telecommunications networks. This year’s theme focuses on interdisciplinary innovations shaping the next generation of telecommunications. Key discussions will explore how AI, quantum computing, and other emerging technologies are transforming the field.</p>
-    </div>
-  </section>
 
-  <!-- Workshop Format Section -->
-  <section id="format" class="content-section">
-    <div class="container">
+      <!-- Workshop Format Section -->
       <h2>Workshop Format</h2>
       <p>WATR 2025 will follow a structured daily module format, ensuring a balanced mix of presentations, discussions, and actionable insights. Each day will center around a specific theme.</p>
       <h3>Day 1: AI and Reasoning in the Network</h3>
@@ -35,12 +27,8 @@
       <p>Investigating the intersection of quantum technologies with telecommunications, including quantum key distribution, quantum networking, and the impact of quantum computing on secure and high-performance communication systems.</p>
       <h3>Day 3: Innovations in Sensing and Connectivity</h3>
       <p>Exploring advancements in sensing, connectivity, and infrastructure, including joint sensing-communication systems, heterogeneous networks, emerging architectures, and new service models.</p>
-    </div>
-  </section>
 
-  <!-- Registration Section -->
-  <section id="registration" class="content-section">
-    <div class="container">
+      <!-- Registration Section -->
       <h2>Registration</h2>
       <p>Registration for WATR 2025 is recommended for general attendees and required for students. The registration fee is $200, with a discounted rate of $100 for students. Further details on the registration process will be provided soon.</p>
       <a href="#" class="cta-button">Register Now</a>
