--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <p>Exploring the role of artificial intelligence in autonomous decision-making, network optimization, and reasoning frameworks in telecommunications.</p>
       <h3>Day 2: Quantum Communications and Computing</h3>
       <p>Investigating the intersection of quantum technologies with telecommunications, including quantum key distribution, quantum networking, and the impact of quantum computing on secure and high-performance communication systems.</p>
-      <h3>Day 3: Innovations in Sensing and Connectivity</h3>
-      <p>Exploring advancements in sensing, connectivity, and infrastructure, including joint sensing-communication systems, heterogeneous networks, emerging architectures, and new service models.</p>
+      <h3>Day 3: Transformative Applications and Services</h3>
+      <p>Exploring the latest advancements in telecommunications applications and service models, including new paradigms in sensing, connectivity, and network infrastructure.</p>
 
       <!-- Registration Section -->
       <h2>Registration</h2>
