--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Navigation Menu -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="organizing-committee.html">Organizing Committee</a></li>
+      <li><a href="venue-details.html">Venue Details</a></li>
+    </ul>
+  </nav>
+
   <!-- Main Content Section -->
   <section id="main-content" class="content-section">
     <div class="container">
