--- a/venue-details.html
+++ b/venue-details.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Navigation Menu -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="organizing-committee.html">Organizing Committee</a></li>
+      <li><a href="venue-details.html">Venue Details</a></li>
+    </ul>
+  </nav>
+
   <!-- Venue Details Section -->
   <section id="venue-details" class="content-section">
     <div class="container">
