--- a/index.html
+++ b/index.html
@@ -9,25 +9,40 @@
 <body>
   <!-- Navigation Menu -->
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="organizing-committee.html">Organizing Committee</a></li>
-      <li><a href="venue-details.html">Venue Details</a></li>
+    <div class="menu-icon">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+    <ul class="nav-list">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#scope">Scope</a></li>
+      <li><a href="#workshop-format">Workshop Format</a></li>
+      <li><a href="#registration">Registration</a></li>
+      <li><a href="#organizing-committee">Organizing Committee</a></li>
+      <li><a href="#venue-details">Venue Details</a></li>
     </ul>
   </nav>
 
-  <!-- Main Content Section -->
-  <section id="main-content" class="content-section">
+  <!-- Hero Section -->
+  <section id="home" class="hero-section">
     <div class="container">
-      <!-- Title -->
       <h1>Workshop on Advances in Telecommunications Research (WATR)</h1>
       <p class="subtitle">June 14-16, 2025 | Queen’s University, Kingston, Ontario</p>
+    </div>
+  </section>
 
-      <!-- Scope Section -->
+  <!-- Scope Section -->
+  <section id="scope" class="content-section">
+    <div class="container">
       <h2>Scope</h2>
       <p>Join us at WATR 2025, where leading researchers, industry experts, and practitioners will explore groundbreaking advancements in telecommunications. This workshop provides a dynamic platform for exchanging ideas, fostering collaborations, and shaping the future of telecommunications networks. This year’s theme focuses on interdisciplinary innovations shaping the next generation of telecommunications. Key discussions will explore how AI, quantum computing, and other emerging technologies are transforming the field.</p>
+    </div>
+  </section>
 
-      <!-- Workshop Format Section -->
+  <!-- Workshop Format Section -->
+  <section id="workshop-format" class="content-section">
+    <div class="container">
       <h2>Workshop Format</h2>
       <p>WATR 2025 will follow a structured daily module format, ensuring a balanced mix of presentations, discussions, and actionable insights. Each day will center around a specific theme.</p>
       <h3>Day 1: AI and Reasoning in the Network</h3>
@@ -36,11 +51,33 @@
       <p>Investigating the intersection of quantum technologies with telecommunications, including quantum key distribution, quantum networking, and the impact of quantum computing on secure and high-performance communication systems.</p>
       <h3>Day 3: Transformative Applications and Services</h3>
       <p>Exploring the latest advancements in telecommunications applications and service models, including new paradigms in sensing, connectivity, and network infrastructure.</p>
+    </div>
+  </section>
 
-      <!-- Registration Section -->
+  <!-- Registration Section -->
+  <section id="registration" class="content-section">
+    <div class="container">
       <h2>Registration</h2>
       <p>Registration for WATR 2025 is recommended for general attendees and required for students. The registration fee is $200, with a discounted rate of $100 for students. Further details on the registration process will be provided soon.</p>
       <a href="#" class="cta-button">Register Now</a>
+    </div>
+  </section>
+
+  <!-- Organizing Committee Section -->
+  <section id="organizing-committee" class="content-section">
+    <div class="container">
+      <h2>Organizing Committee</h2>
+      <p>This page will list the members of the organizing committee, their roles, and contact information.</p>
+      <p>Details coming soon!</p>
+    </div>
+  </section>
+
+  <!-- Venue Details Section -->
+  <section id="venue-details" class="content-section">
+    <div class="container">
+      <h2>Venue Details</h2>
+      <p>This page will provide information about the venue, including the location, directions, and nearby accommodations.</p>
+      <p>Details coming soon!</p>
     </div>
   </section>
 
