--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </section>
 
   <!-- Scope Section -->
-  <section id="scope" class="content-section">
+  <section id="scope" class="content-section" style="background-color: #f0f8ff;">
     <div class="container">
       <h2>Scope</h2>
       <p>Join us at WATR 2025, where leading researchers, industry experts, and practitioners will explore groundbreaking advancements in telecommunications. This workshop provides a dynamic platform for exchanging ideas, fostering collaborations, and shaping the future of telecommunications networks. This year’s theme focuses on interdisciplinary innovations shaping the next generation of telecommunications. Key discussions will explore how AI, quantum computing, and other emerging technologies are transforming the field.</p>
@@ -41,7 +41,7 @@
   </section>
 
   <!-- Workshop Format Section -->
-  <section id="workshop-format" class="content-section">
+  <section id="workshop-format" class="content-section" style="background-color: #e6e6fa;">
     <div class="container">
       <h2>Workshop Format</h2>
       <p>WATR 2025 will follow a structured daily module format, ensuring a balanced mix of presentations, discussions, and actionable insights. Each day will center around a specific theme.</p>
@@ -55,7 +55,7 @@
   </section>
 
   <!-- Registration Section -->
-  <section id="registration" class="content-section">
+  <section id="registration" class="content-section" style="background-color: #fffacd;">
     <div class="container">
       <h2>Registration</h2>
       <p>Registration for WATR 2025 is recommended for general attendees and required for students. The registration fee is $200, with a discounted rate of $100 for students. Further details on the registration process will be provided soon.</p>
@@ -64,19 +64,19 @@
   </section>
 
   <!-- Organizing Committee Section -->
-  <section id="organizing-committee" class="content-section">
+  <section id="organizing-committee" class="content-section" style="background-color: #f5f5dc;">
     <div class="container">
       <h2>Organizing Committee</h2>
-      <p>This page will list the members of the organizing committee, their roles, and contact information.</p>
+      <p>This section will list the members of the organizing committee, their roles, and contact information.</p>
       <p>Details coming soon!</p>
     </div>
   </section>
 
   <!-- Venue Details Section -->
-  <section id="venue-details" class="content-section">
+  <section id="venue-details" class="content-section" style="background-color: #f0fff0;">
     <div class="container">
       <h2>Venue Details</h2>
-      <p>This page will provide information about the venue, including the location, directions, and nearby accommodations.</p>
+      <p>This section will provide information about the venue, including the location, directions, and nearby accommodations.</p>
       <p>Details coming soon!</p>
     </div>
   </section>
