--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="#workshop-format">Workshop Format</a></li>
       <li><a href="#registration">Registration</a></li>
       <li><a href="#organizing-committee">Organizing Committee</a></li>
-      <li><a href="#venue-details">Venue Details</a></li>
+      <li><a href="#venue-details">Venue</a></li>
     </ul>
   </nav>
 
@@ -75,7 +75,7 @@
   <!-- Venue Details Section -->
   <section id="venue-details" class="content-section" style="background-color: #D3D3D3;"> <!-- Grey -->
     <div class="container">
-      <h2>Venue Details</h2>
+      <h2>Venue</h2>
       <p>This section will provide information about the venue, including the location, directions, and nearby accommodations.</p>
       <p>Details coming soon!</p>
     </div>
