--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
   <section id="registration" class="content-section" style="background-color: #FFFFFF;"> <!-- White -->
     <div class="container">
       <h2>Registration</h2>
-      <p>Registration for WATR 2025 is recommended for general attendees and required for students. The registration fee is $200, with a discounted rate of $100 for students. Further details on the registration process will be provided soon.</p>
+      <p>All attendees are required to register for WATR 2025.
+        The registration fee of $200 (or $100 for students) helps support the event and its organization.
+        Further details on the registration process will be shared soon.
+      </p>
       <a href="#" class="cta-button">Register Now</a>
     </div>
   </section>
