--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>We look forward to welcoming you to Kingston this June!</p>
+  <p>WATR'2025. Kingston, Ontario.</p>
   </footer>
 
   <!-- Optional JavaScript for Smooth Scrolling -->
