--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <!-- Footer -->
   <footer>
-  <p>WATR'2025. Kingston, Ontario.</p>
+  <p>WATR'2025 in Kingston, Ontario.</p>
   </footer>
 
   <!-- Optional JavaScript for Smooth Scrolling -->
