--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </ul>
   </nav>
 
-  <!-- Hero Section -->
-  <section id="home" class="hero-section">
-    <div class="container">
-      <h1>Workshop on Advances in Telecommunications Research (WATR)</h1>
-      <p class="subtitle">June 14-16, 2025 | Queen’s University, Kingston, Ontario</p>
-    </div>
-  </section>
+<!-- Hero Section -->
+<section id="home" class="content-section" style="background-color: #FFFFFF;">
+  <div class="container">
+    <h1>Workshop on Advances in Telecommunications Research (WATR)</h1>
+    <p class="subtitle">June 14-16, 2025 | Queen’s University, Kingston, Ontario</p>
+  </div>
+</section>
 
   <!-- Scope Section -->
   <section id="scope" class="content-section" style="background-color: #F5F5DC;"> <!-- Light Limestone -->
