--- a/index.html
+++ b/index.html
@@ -66,14 +66,17 @@
     </div>
   </section>
 
-  <!-- Organizing Committee Section -->
-  <section id="organizing-committee" class="content-section" style="background-color: #F5F5DC;"> <!-- Light Limestone -->
-    <div class="container">
-      <h2>Organizing Committee</h2>
-      <p>This section will list the members of the organizing committee, their roles, and contact information.</p>
-      <p>Details coming soon!</p>
-    </div>
-  </section>
+<!-- Organizing Committee Section -->
+<section id="organizing-committee" class="content-section" style="background-color: #F5F5DC;"> <!-- Light Limestone -->
+  <div class="container">
+    <h2>Organizing Committee</h2>
+    <ul>
+      <li><strong>General Chair</strong> Abd-Elhamid M. Taha, Alfaisal University</li>
+      <li><strong>Program Cochairs</strong> Ahmed Refaey, Guelph University and Ayman Radwan, IST - University of Lisbon</li>
+      <li><strong>Local Arrangements Chair</strong> Salimur Choudhury, Queen's University</li>
+    </ul>
+  </div>
+</section>
 
   <!-- Venue Details Section -->
   <section id="venue-details" class="content-section" style="background-color: #D3D3D3;"> <!-- Grey -->
