--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
   <div class="container">
     <h2>Organizing Committee</h2>
     <ul>
-      <li><strong>General Chair</strong> Abd-Elhamid M. Taha, Alfaisal University</li>
+      <li><strong>Honorary Chair</strong> Hossam Hassanein, Queen's University</li>
+      <li><strong>Workshop Chair</strong> Abd-Elhamid M. Taha, Alfaisal University</li>
       <li><strong>Program Cochairs</strong> Ahmed Refaey, Guelph University and Ayman Radwan, IST - University of Lisbon</li>
+      <li><strong>Publicity and Outreach Chair</strong> Sharief Oteafy, DePaul University</li>
       <li><strong>Local Arrangements Chair</strong> Salimur Choudhury, Queen's University</li>
     </ul>
   </div>
