--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
     </div>
   </section>
 
-  <!-- Registration Section -->
-  <section id="registration" class="content-section" style="background-color: #FFFFFF;"> <!-- White -->
-    <div class="container">
-      <h2>Registration</h2>
-      <p>All attendees are required to register for WATR 2025.
-        The registration fee of $200 (or $100 for students) helps support the event and its organization.
-        Further details on the registration process will be shared soon.
-      </p>
-      <a href="#" class="cta-button">Register Now</a>
-    </div>
-  </section>
+<!-- Registration Section -->
+<section id="registration" class="content-section" style="background-color: #FFFFFF;"> <!-- White -->
+  <div class="container">
+    <h2>Registration</h2>
+    <p>All attendees are required to register for WATR 2025.
+      The registration fee of $200 (or $100 for students) helps support the event and its organization.
+    </p>
+    <a href="https://events.vtools.ieee.org/m/484310" class="cta-button" target="_blank" rel="noopener noreferrer">Register Now</a>
+  </div>
+</section>
+
 
 <!-- Organizing Committee Section -->
 <section id="organizing-committee" class="content-section" style="background-color: #F5F5DC;"> <!-- Light Limestone -->
