--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
       <span class="bar"></span>
       <span class="bar"></span>
     </div>
-    <ul class="nav-list">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#scope">Scope</a></li>
-      <li><a href="#workshop-format">Workshop Format</a></li>
-      <li><a href="#registration">Registration</a></li>
-      <li><a href="#organizing-committee">Organizing Committee</a></li>
-      <li><a href="#venue-details">Venue</a></li>
-    </ul>
+<ul class="nav-list">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#scope">Scope</a></li>
+  <li><a href="#workshop-program">Workshop Program</a></li>
+  <li><a href="#registration">Registration</a></li>
+  <li><a href="#organizing-committee">Organizing Committee</a></li>
+  <li><a href="#venue-details">Venue</a></li>
+</ul>
+
   </nav>
 
 <!-- Hero Section -->
@@ -29,6 +30,11 @@
   <div class="container">
     <h1>Workshop on Advances in Telecommunications Research (WATR)</h1>
     <p class="subtitle">June 16-18, 2025 | Queen’s University, Kingston, Ontario</p>
+<p style="font-style: italic; color: #555;">
+  Generously supported by the IEEE Sections in
+  <a href="https://site.ieee.org/kingston/" target="_blank" rel="noopener noreferrer">Kingston</a> and
+  <a href="https://kw.ieee.ca/" target="_blank" rel="noopener noreferrer">Waterloo-Kitchener</a>.
+</p>
   </div>
 </section>
 
@@ -40,19 +46,21 @@
     </div>
   </section>
 
-  <!-- Workshop Format Section -->
-  <section id="workshop-format" class="content-section" style="background-color: #D3D3D3;"> <!-- Grey -->
-    <div class="container">
-      <h2>Workshop Format</h2>
-      <p>WATR 2025 will follow a structured daily module format, ensuring a balanced mix of presentations, discussions, and actionable insights. Each day will center around a specific theme.</p>
-      <h3>Day 1: AI and Reasoning in the Network</h3>
-      <p>Exploring the role of artificial intelligence in autonomous decision-making, network optimization, and reasoning frameworks in telecommunications.</p>
-      <h3>Day 2: Quantum Communications and Computing</h3>
-      <p>Investigating the intersection of quantum technologies with telecommunications, including quantum key distribution, quantum networking, and the impact of quantum computing on secure and high-performance communication systems.</p>
-      <h3>Day 3: Transformative Applications and Services</h3>
-      <p>Exploring the latest advancements in telecommunications applications and service models, including new paradigms in sensing, connectivity, and network infrastructure.</p>
-    </div>
-  </section>
+<!-- Workshop Program Section -->
+<section id="workshop-program" class="content-section" style="background-color: #D3D3D3;">
+  <div class="container">
+    <h2>Workshop Program</h2>
+    <p>The three-day WATR 2025 workshop is structured around key themes that reflect the evolving landscape of telecommunications research:</p>
+    <ul>
+      <li><strong>Day 1 – AI and 6G:</strong> Exploring native intelligence, large language models, and terahertz communications.</li>
+      <li><strong>Day 2 – The Transformative Network:</strong> Quantum systems, edge computing, and resilient networking solutions.</li>
+      <li><strong>Day 3 – Advances in IoT:</strong> Tactile internet, biomedical sensing, and human-centered IoT applications.</li>
+    </ul>
+    <p>View the complete schedule and speaker list:</p>
+    <a href="https://hamid-taha.github.io/WATR25/WATR25%20Program.pdf" class="cta-button" target="_blank" rel="noopener noreferrer">Download Full Program (PDF)</a>
+  </div>
+</section>
+
 
 <!-- Registration Section -->
 <section id="registration" class="content-section" style="background-color: #FFFFFF;"> <!-- White -->
